--- a/linked_lists/circularly_linked_lists.ipynb
+++ b/linked_lists/circularly_linked_lists.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resources\n",
+    "\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Circular linked list](https://www.youtube.com/watch?v=3bmCGdh0jS8&index=6&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Circularly linked list based on singly\n",
     "The tail node needs to point at the head, can be used in doubly too."
    ]
