--- a/linked_lists/singly_linked_lists.ipynb
+++ b/linked_lists/singly_linked_lists.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resources\n",
+    "\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Linked lists](https://www.youtube.com/watch?v=Bd1L64clh34&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
+    "- [Sorting a linked list](https://www.youtube.com/watch?v=Xk0Tgh1AbfE&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Singly linked lists\n",
     "\n",
     "Tail always points to None."
@@ -547,12 +558,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Sorting</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SinglyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.tail = None\n",
+    "        self.head = None\n",
+    "        self.size = 0\n",
+    "        \n",
+    "        \n",
+    "    def append(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.tail:\n",
+    "            self.tail.next = node\n",
+    "            self.tail = node\n",
+    "        else:\n",
+    "            self.tail = node\n",
+    "            self.head = node \n",
+    "        self.size += 1 \n",
+    "         \n",
+    "            \n",
+    "    def iterate(self):\n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            yield current.value\n",
+    "            current = current.next       \n",
+    "            \n",
+    "    \n",
+    "    def sort(self):\n",
+    "        \"\"\"\n",
+    "        Iterate through, while current, appened to a list and sort.\n",
+    "        \"\"\"\n",
+    "        current = self.head\n",
+    "        to_sort = []\n",
+    "        while current:\n",
+    "            to_sort.append(current.value)\n",
+    "            current = current.next\n",
+    "        to_sort.sort(reverse=True)  # Depends on your preference\n",
+    "        return to_sort\n",
+    "\n",
+    "            \n",
+    "    def delete(self, value):\n",
+    "        current = self.head\n",
+    "        previous = self.head\n",
+    "        while current:\n",
+    "            if current.value == value:\n",
+    "                if current == self.head:\n",
+    "                    self.head = current.next\n",
+    "                else:\n",
+    "                    previous.next = current.next\n",
+    "                self.size -= 1\n",
+    "                return\n",
+    "            previous = current\n",
+    "            current = current.next\n",
+    "         \n",
+    "        \n",
+    "    def search(self, value):\n",
+    "        for node in self.iterate():\n",
+    "            if value == node:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "    def clear(self):\n",
+    "        self.tail = None\n",
+    "        self.head = None\n",
+    "        print('cleared')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[232, 34, 11]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = SinglyLinkedList()\n",
+    "\n",
+    "nums.append(11)\n",
+    "nums.append(232)\n",
+    "nums.append(34)\n",
+    "\n",
+    "nums.sort()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# All Together"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +711,20 @@
     "        current = self.head\n",
     "        while current:\n",
     "            yield current.value\n",
-    "            current = current.next         \n",
+    "            current = current.next\n",
+    "            \n",
+    "            \n",
+    "    def sort(self):\n",
+    "        \"\"\"\n",
+    "        Iterate through, while current, appened to a list and sort.\n",
+    "        \"\"\"\n",
+    "        current = self.head\n",
+    "        to_sort = []\n",
+    "        while current:\n",
+    "            to_sort.append(current.value)\n",
+    "            current = current.next\n",
+    "        to_sort.sort(reverse=True)  # Depends on your preference\n",
+    "        return to_sort\n",
     "\n",
     "            \n",
     "    def delete(self, value):\n",
@@ -632,45 +761,13 @@
     "    \n",
     "    \n",
     "    def clear(self):\n",
-    "        \"\"\"Easily clear the linked list by setting both the head and tail to None.\n",
+    "        \"\"\"\n",
+    "        Easily clear the linked list by setting both the head and tail to None.\n",
     "        \"\"\"\n",
     "        self.tail = None\n",
     "        self.head = None\n",
     "        self.size = 0\n",
     "        print('cleared')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "words = SinglyLinkedList()\n",
-    "\n",
-    "words.append('egg')\n",
-    "words.append('ham')\n",
-    "words.append('spam')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "words.search('ham')"
    ]
   }
  ],
