--- a/trees/binary_search_trees.ipynb
+++ b/trees/binary_search_trees.ipynb
@@ -16,6 +16,8 @@
     "- Code\n",
     "  - [Part 1](https://www.youtube.com/watch?v=1WxLM2hwL-U)\n",
     "  - [Part 2](https://www.youtube.com/watch?v=LSju119w8BE)\n",
+    "  - [Get Size](https://www.youtube.com/watch?v=vVhp2FYGNKU)\n",
+    "  - [Get Height](https://www.youtube.com/watch?v=aGaMgkJX5-o&index=6&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq)\n",
     "\n",
     "- Traversal\n",
     "  - [Pre-order](https://www.youtube.com/watch?v=YlgPi75hIBc)\n",
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -50,7 +52,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -102,7 +104,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,29 @@
     "                return self.right_child.find(value)\n",
     "            else:\n",
     "                return False\n",
-    "        \n",
+    "            \n",
+    "            \n",
+    "    def get_height(self):\n",
+    "        if self.left_child and self.right_child:\n",
+    "            return 1 + max(self.left_child.get_height(), self.right_child.get_height())\n",
+    "        elif self.left_child:\n",
+    "            return 1 + self.left_child.get_height()\n",
+    "        elif self.right_child:\n",
+    "            return 1 + self.right_child.get_height()\n",
+    "        else:\n",
+    "            return 1\n",
+    "\n",
+    "\n",
+    "    def get_size(self):\n",
+    "        if self.left_child and self.right_child:\n",
+    "            return 1 + self.left_child.get_size(), self.right_child.get_size()\n",
+    "        elif self.left_child:\n",
+    "            return 1 + self.left_child.get_size()\n",
+    "        elif self.right_child:\n",
+    "            return 1 + self.right_child.get_size()\n",
+    "        else:\n",
+    "            return 1\n",
+    "\n",
     "        \n",
     "    def preorder(self):\n",
     "        if self:\n",
@@ -295,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,10 +448,24 @@
     "    \n",
     "    def find(self, value):\n",
     "        if self.root:\n",
-    "            return self.root.find(value)\n",
+    "            self.root.find(value)\n",
     "        else:\n",
     "            return False\n",
     "        \n",
+    "    \n",
+    "    def get_height(self):\n",
+    "        if self.root:\n",
+    "            return self.root.get_height()\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "\n",
+    "    def get_size(self):\n",
+    "        if self.root:\n",
+    "            return self.root.get_size()\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
     "        \n",
     "    def preorder(self):\n",
     "        \"\"\"\n",
