--- a/linked_lists/doubly_linked_lists.ipynb
+++ b/linked_lists/doubly_linked_lists.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resources\n",
+    "\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Doubly linked lists](https://www.youtube.com/watch?v=sDP_pReYNEc&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Doubly Linked Lists\n",
     "\n",
     "Tail always points to None.\n",
@@ -13,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +192,7 @@
        "3"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +255,7 @@
        "2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +362,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Sorting</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoublyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "        self.size = 0\n",
+    "        \n",
+    "        \n",
+    "    def append(self, value):\n",
+    "        node = Node(value) \n",
+    "        if self.head:\n",
+    "            node.previous = self.tail\n",
+    "            self.tail.next = node\n",
+    "            self.tail = node  \n",
+    "        else:\n",
+    "            self.head = node\n",
+    "            self.tail = self.head      \n",
+    "        self.size += 1\n",
+    "            \n",
+    "            \n",
+    "    def iterate(self):  \n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            yield current.value\n",
+    "            current = current.next\n",
+    "            \n",
+    "            \n",
+    "    def sort(self):\n",
+    "        \"\"\"\n",
+    "        Iterate through, while current, appened to a list and sort.\n",
+    "        \"\"\"\n",
+    "        current = self.head\n",
+    "        to_sort = []\n",
+    "        while current:\n",
+    "            to_sort.append(current.value)\n",
+    "            current = current.next\n",
+    "        to_sort.sort(reverse=True)  # Depends on your preference\n",
+    "        return to_sort\n",
+    "    \n",
+    "    \n",
+    "    def delete(self, value):\n",
+    "        current = self.head\n",
+    "        node_deleted = False\n",
+    "        if current is None:\n",
+    "            node_deleted = False\n",
+    "        elif current.value == value:   \n",
+    "            self.head = current.next   \n",
+    "            self.head.previous = None  \n",
+    "            node_deleted = True\n",
+    "        elif self.tail.value == value:     \n",
+    "            self.tail = self.tail.previous \n",
+    "            self.tail.next = None          \n",
+    "            node_deleted = True\n",
+    "        else:\n",
+    "            while current:  \n",
+    "                if current.value == value: \n",
+    "                    current.prev.next = current.next  \n",
+    "                    currrent.next.previous = current.previous  \n",
+    "                    node_deleted = True\n",
+    "                    current = current.next\n",
+    "        if node_deleted:\n",
+    "            self.size -= 1\n",
+    "            \n",
+    "            \n",
+    "    def search(self, value):  # Same algorithm as singly linked lists\n",
+    "        for node in self.iterate():\n",
+    "            if value == node:\n",
+    "                return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# All Together"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,6 +517,19 @@
     "            current = current.next\n",
     "            \n",
     "            \n",
+    "    def sort(self):\n",
+    "        \"\"\"\n",
+    "        Iterate through, while current, appened to a list and sort.\n",
+    "        \"\"\"\n",
+    "        current = self.head\n",
+    "        to_sort = []\n",
+    "        while current:\n",
+    "            to_sort.append(current.value)\n",
+    "            current = current.next\n",
+    "        to_sort.sort(reverse=True)  # Depends on your preference\n",
+    "        return to_sort\n",
+    "            \n",
+    "            \n",
     "    def search(self, value, position=-1):  # Same logic as signly linked lists\n",
     "        \"\"\"\n",
     "        Search within all the nodes if the value you\n",
@@ -448,9 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -459,7 +565,7 @@
        "3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
