--- a/hashing/hashing.ipynb
+++ b/hashing/hashing.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
-    "\n",
-    "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Hashmaps using lists](https://www.youtube.com/watch?v=9HFbhPscPU0)"
+    "# Hashing"
    ]
   },
   {
@@ -32,6 +29,29 @@
     "1. Array: A data structure to store the data/value\n",
     "2. Hash function: A function to convert key into an array index\n",
     "3. Collision handler: If there is already a key, update the value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>References</b>\n",
+    "\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Hashmaps using lists](https://www.youtube.com/watch?v=9HFbhPscPU0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
    ]
   },
   {
