--- a/linked_lists/circularly_linked_lists.ipynb
+++ b/linked_lists/circularly_linked_lists.ipynb
@@ -4,18 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
+    "# Circularly Linked List\n",
     "\n",
-    "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Circular linked list](https://www.youtube.com/watch?v=3bmCGdh0jS8&index=6&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)"
+    "In short a linked list (singly or doubly) where the tail node points at the head.\n",
+    "\n",
+    "In the last node of a list, the link field often contains a null reference, a special value is used to indicate the lack of further nodes. A less common convention is to make it point to the first node of the list; in that case, the list is said to be 'circular' or 'circularly linked'; otherwise, it is said to be 'open' or 'linear'. It is a list where the last pointer points to the first node."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Circularly linked list based on singly\n",
-    "The tail node needs to point at the head, can be used in doubly too."
+    "<b>References</b>\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Circular linked list](https://www.youtube.com/watch?v=3bmCGdh0jS8&index=6&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
+    "- [Wikipedia](https://en.wikipedia.org/wiki/Linked_list#Circular_linked_list)"
    ]
   },
   {
@@ -24,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Uncomment if you want to use inline pythontutor\n",
+    "# # Uncomment to use inline pythontutor\n",
     "\n",
     "# from IPython.display import IFrame\n",
     "\n",
