--- a/linked_lists/doubly_linked_lists.ipynb
+++ b/linked_lists/doubly_linked_lists.ipynb
@@ -4,21 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
+    "# Doubly Linked Lists\n",
+    "In short what differs from singly is that nodes have a previous node value.\n",
     "\n",
-    "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Doubly linked lists](https://www.youtube.com/watch?v=sDP_pReYNEc&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=3)"
+    "In a 'doubly linked list', each node contains, besides the next-node link, a second link field pointing to the 'previous' node in the sequence. The two links may be called 'forward('s') and 'backwards', or 'next' and 'prev'('previous').\n",
+    "\n",
+    "Tail always points to None."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Doubly Linked Lists\n",
-    "\n",
-    "Tail always points to None.\n",
-    "\n",
-    "What differs from singly is that nodes have a previous node value."
+    "<b>References</b>\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Doubly linked lists](https://www.youtube.com/watch?v=sDP_pReYNEc&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=3)\n",
+    "- [Wikipedia](https://en.wikipedia.org/wiki/Linked_list#Doubly_linked_list)"
    ]
   },
   {
@@ -27,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Uncomment if you want to use inline pythontutor\n",
+    "# # Uncomment to use inline pythontutor\n",
     "\n",
     "# from IPython.display import IFrame\n",
     "\n",
