--- a/linked_lists/singly_linked_lists.ipynb
+++ b/linked_lists/singly_linked_lists.ipynb
@@ -4,20 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
+    "# Singly linked lists\n",
     "\n",
-    "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Linked lists](https://www.youtube.com/watch?v=Bd1L64clh34&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
-    "- [Sorting a linked list](https://www.youtube.com/watch?v=Xk0Tgh1AbfE&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=5)"
+    "A linked list is a linear collection of data elements, whose order is not given by their physical placement in memory. Instead, each element points to the next. The tail always points to None."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Singly linked lists\n",
-    "\n",
-    "Tail always points to None."
+    "<b>References</b>\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Linked lists](https://www.youtube.com/watch?v=Bd1L64clh34&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
+    "- [Sorting a linked list](https://www.youtube.com/watch?v=Xk0Tgh1AbfE&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=5)\n",
+    "- [Wikipedia](https://en.wikipedia.org/wiki/Linked_list#Singly_linked_list)"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Uncomment if you want to use inline pythontutor\n",
+    "# # Uncomment to use inline pythontutor\n",
     "\n",
     "# from IPython.display import IFrame\n",
     "\n",
