--- a/stacks_and_queues/queues/queues.ipynb
+++ b/stacks_and_queues/queues/queues.ipynb
@@ -24,12 +24,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>References</b>\n",
+    "- Python Data Structures and Algorithms by Benjamin Baka\n",
+    "- [Queues by Study Tonight](https://www.studytonight.com/data-structures/queue-data-structure)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Uncomment if you want to use inline pythontutor\n",
+    "# # Uncomment to use inline pythontutor\n",
     "\n",
     "# from IPython.display import IFrame\n",
     "\n",
