--- a/trees/2_3_trees.ipynb
+++ b/trees/2_3_trees.ipynb
@@ -4,10 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resources\n",
-    "\n",
-    "[2-3 Trees](https://www.youtube.com/watch?v=vSbBB4MRzp4&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq&index=5)"
+    "# 2-3 Trees"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>References</b>\n",
+    "- [Python: 2-3 Trees](https://www.youtube.com/watch?v=vSbBB4MRzp4&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq&index=5)\n",
+    "- [2-3 Tree Insertion](https://www.youtube.com/watch?v=bhKixY-cZHE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
