--- a/trees/2_3_trees.ipynb
+++ b/trees/2_3_trees.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2-3 Trees"
+    "# 2-3 Trees\n",
+    "A 2–3 tree is a tree data structure, where every node with children (internal node) has either two children (2-node) and one data element or three children (3-nodes) and two data elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Balanced search tree\n",
+    " - All leaf nodes at the same level\n",
+    "\n",
+    "- Each parent node can have:\n",
+    " - 1 value and 2 children, OR\n",
+    " - 2 values and 3 children\n",
+    " \n",
+    "- Worst case O(log n) find, insert, remove\n",
+    "- Similar to 2-3-4 Trees and B-Trees."
    ]
   },
   {
@@ -13,7 +29,8 @@
    "source": [
     "<b>References</b>\n",
     "- [Python: 2-3 Trees](https://www.youtube.com/watch?v=vSbBB4MRzp4&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq&index=5)\n",
-    "- [2-3 Tree Insertion](https://www.youtube.com/watch?v=bhKixY-cZHE)"
+    "- [2-3 Tree Insertion](https://www.youtube.com/watch?v=bhKixY-cZHE)\n",
+    "- [Wikipedia](https://en.wikipedia.org/wiki/2%E2%80%933_tree)"
    ]
   },
   {
@@ -30,11 +47,316 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<b>Example</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree __init__\n",
+      "Tree insert: 13\n",
+      "Tree insert: 7\n",
+      "Tree insert: 24\n",
+      "Tree insert: 15\n",
+      "Tree insert: 4\n",
+      "Tree insert: 29\n",
+      "Tree insert: 20\n",
+      "Tree insert: 16\n",
+      "Tree insert: 19\n",
+      "Tree insert: 1\n",
+      "Tree insert: 5\n",
+      "Tree insert: 22\n",
+      "Tree insert: 17\n",
+      "----Top 2 Tiers----\n",
+      "[16]\n",
+      "[4, 13] [20, 24]  \n",
+      "Tree insert: 0\n",
+      "----Top 2 Tiers----\n",
+      "[16]\n",
+      "[4, 13] [20, 24]  \n",
+      "Tree insert: 1\n",
+      "----Top 2 Tiers----\n",
+      "[4, 16]\n",
+      "[1] [13] [20, 24]  \n",
+      "Tree insert: 2\n",
+      "----Top 2 Tiers----\n",
+      "[4, 16]\n",
+      "[1] [13] [20, 24]  \n",
+      "Tree insert: 3\n",
+      "----Top 2 Tiers----\n",
+      "[4, 16]\n",
+      "[1, 2] [13] [20, 24]  \n",
+      "Tree insert: 4\n",
+      "----Top 2 Tiers----\n",
+      "[4, 16]\n",
+      "[1, 2] [5, 13] [20, 24]  \n",
+      "Tree insert: 5\n",
+      "----Top 2 Tiers----\n",
+      "[4, 16]\n",
+      "[1, 2] [5, 13] [20, 24]  \n",
+      "Tree insert: 6\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [16]  \n",
+      "Tree insert: 7\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [16]  \n",
+      "Tree insert: 8\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [16]  \n",
+      "Tree insert: 9\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [16]  \n",
+      "Tree insert: 10\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [9, 16]  \n",
+      "Tree insert: 11\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [9, 16]  \n",
+      "Tree insert: 12\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [9, 16]  \n",
+      "Tree insert: 13\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [9, 16]  \n",
+      "Tree insert: 14\n",
+      "----Top 2 Tiers----\n",
+      "[6]\n",
+      "[4] [9, 16]  \n",
+      "Tree insert: 15\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16]  \n",
+      "Tree insert: 16\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16]  \n",
+      "Tree insert: 17\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 18\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 19\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 20\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 21\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 22\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 23\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "Tree insert: 24\n",
+      "----Top 2 Tiers----\n",
+      "[6, 13]\n",
+      "[4] [9] [16, 20]  \n",
+      "----Preorder----\n",
+      "Root : [6, 13]\n",
+      "[6, 13] : [4]\n",
+      "[4] : [1, 2]\n",
+      "[1, 2] : [0]\n",
+      "[1, 2] : [1]\n",
+      "[1, 2] : [3]\n",
+      "[4] : [5]\n",
+      "[5] : [4]\n",
+      "[5] : [5]\n",
+      "[6, 13] : [9]\n",
+      "[9] : [7]\n",
+      "[7] : [7]\n",
+      "[7] : [8]\n",
+      "[9] : [11]\n",
+      "[11] : [10]\n",
+      "[11] : [12]\n",
+      "[6, 13] : [16, 20]\n",
+      "[16, 20] : [15]\n",
+      "[15] : [14]\n",
+      "[15] : [15]\n",
+      "[16, 20] : [17, 19]\n",
+      "[17, 19] : [17]\n",
+      "[17, 19] : [18]\n",
+      "[17, 19] : [19]\n",
+      "[16, 20] : [22, 24]\n",
+      "[22, 24] : [21]\n",
+      "[22, 24] : [22, 23]\n",
+      "[22, 24] : [29]\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value, par = None):\n",
+    "        # print (\"Node __init__: \" + str(value))\n",
+    "        self.value = list([value])\n",
+    "        self.parent = par\n",
+    "        self.child = list()\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        if self.parent:\n",
+    "            return str(self.parent.value) + ' : ' + str(self.value)\n",
+    "        return 'Root : ' + str(self.value)\n",
+    "    \n",
+    "    def __lt__(self, node):\n",
+    "        return self.value[0] < node.value[0]\n",
+    "        \n",
+    "    def _isLeaf(self):\n",
+    "        return len(self.child) == 0\n",
+    "            \n",
+    "    # merge new_node sub-tree into self node\n",
+    "    def _add(self, new_node):\n",
+    "        # print (\"Node _add: \" + str(new_node.value) + ' to ' + str(self.value))\n",
+    "        for child in new_node.child:\n",
+    "            child.parent = self\n",
+    "        self.value.extend(new_node.value)\n",
+    "        self.value.sort()\n",
+    "        self.child.extend(new_node.child)\n",
+    "        if len(self.child) > 1:\n",
+    "            self.child.sort()\n",
+    "        if len(self.value) > 2:\n",
+    "            self._split()\n",
+    "    \n",
+    "    # find correct node to insert new node into tree\n",
+    "    def _insert(self, new_node):\n",
+    "        # print ('Node _insert: ' + str(new_node.value) + ' into ' + str(self.value))\n",
+    "        \n",
+    "        # leaf node - add value to leaf and rebalance tree\n",
+    "        if self._isLeaf():\n",
+    "            self._add(new_node)\n",
+    "            \n",
+    "        # not leaf - find correct child to descend, and do recursive insert\n",
+    "        elif new_node.value[0] > self.value[-1]:\n",
+    "            self.child[-1]._insert(new_node)\n",
+    "        else:\n",
+    "            for i in range(0, len(self.value)):\n",
+    "                if new_node.value[0] < self.value[i]:\n",
+    "                    self.child[i]._insert(new_node)\n",
+    "                    break\n",
+    "    \n",
+    "    # 3 items in node, split into new sub-tree and add to parent    \n",
+    "    def _split(self):\n",
+    "        # print(\"Node _split: \" + str(self.value))\n",
+    "        left_child = Node(self.value[0], self)\n",
+    "        right_child = Node(self.value[2], self)\n",
+    "        if self.child:\n",
+    "            self.child[0].parent = left_child\n",
+    "            self.child[1].parent = left_child\n",
+    "            self.child[2].parent = right_child\n",
+    "            self.child[3].parent = right_child\n",
+    "            left_child.child = [self.child[0], self.child[1]]\n",
+    "            right_child.child = [self.child[2], self.child[3]]\n",
+    "                    \n",
+    "        self.child = [left_child]\n",
+    "        self.child.append(right_child)\n",
+    "        self.value = [self.value[1]]\n",
+    "        \n",
+    "        # now have new sub-tree, self. need to add self to its parent node\n",
+    "        if self.parent:\n",
+    "            if self in self.parent.child:\n",
+    "                self.parent.child.remove(self)\n",
+    "            self.parent._add(self)\n",
+    "        else:\n",
+    "            left_child.parent = self\n",
+    "            right_child.parent = self\n",
+    "            \n",
+    "    # find an item in the tree; return item, or False if not found        \n",
+    "    def _find(self, item):\n",
+    "        # print (\"Find \" + str(item))\n",
+    "        if item in self.value:\n",
+    "            return item\n",
+    "        elif self._isLeaf():\n",
+    "            return False\n",
+    "        elif item > self.value[-1]:\n",
+    "            return self.child[-1]._find(item)\n",
+    "        else:\n",
+    "            for i in range(len(self.value)):\n",
+    "                if item < self.value[i]:\n",
+    "                    return self.child[i]._find(item)\n",
+    "        \n",
+    "    def _remove(self, item):\n",
+    "        pass\n",
+    "        \n",
+    "    # print preorder traversal        \n",
+    "    def _preorder(self):\n",
+    "        print (self) \n",
+    "        for child in self.child:\n",
+    "            child._preorder()\n",
+    "    \n",
+    "class Tree:\n",
+    "    def __init__(self):\n",
+    "        print(\"Tree __init__\")\n",
+    "        self.root = None\n",
+    "        \n",
+    "    def insert(self, item):\n",
+    "        print(\"Tree insert: \" + str(item))\n",
+    "        if self.root is None:\n",
+    "            self.root = Node(item)\n",
+    "        else:\n",
+    "            self.root._insert(Node(item))\n",
+    "            while self.root.parent:\n",
+    "                self.root = self.root.parent\n",
+    "        return True\n",
+    "    \n",
+    "    def find(self, item):\n",
+    "        return self.root._find(item)\n",
+    "        \n",
+    "    def remove(self, item):\n",
+    "        self.root.remove(item)\n",
+    "        \n",
+    "    def printTop2Tiers(self):\n",
+    "        print ('----Top 2 Tiers----')\n",
+    "        print (str(self.root.value))\n",
+    "        for child in self.root.child:\n",
+    "            print (str(child.value), end=' ')\n",
+    "        print(' ')\n",
+    "        \n",
+    "    def preorder(self):\n",
+    "        print ('----Preorder----')\n",
+    "        self.root._preorder()\n",
+    "        \n",
+    "tree = Tree()\n",
+    "\n",
+    "lst = [13, 7, 24, 15, 4, 29, 20, 16, 19, 1, 5, 22, 17]\n",
+    "for item in lst:\n",
+    "    tree.insert(item)\n",
+    "tree.printTop2Tiers()\n",
+    "\n",
+    "for i in range (25):\n",
+    "    tree.insert(i)\n",
+    "    tree.printTop2Tiers()\n",
+    "tree.preorder()\n",
+    "print (tree.find(16))"
+   ]
   },
   {
    "cell_type": "code",
