--- a/trees/binary_search_trees.ipynb
+++ b/trees/binary_search_trees.ipynb
@@ -4,26 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Search Trees"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>References:</b>\n",
-    "\n",
-    "- Code\n",
-    "  - [Part 1](https://www.youtube.com/watch?v=1WxLM2hwL-U)\n",
-    "  - [Part 2](https://www.youtube.com/watch?v=LSju119w8BE)\n",
-    "  - [Get Size](https://www.youtube.com/watch?v=vVhp2FYGNKU)\n",
-    "  - [Get Height](https://www.youtube.com/watch?v=aGaMgkJX5-o&index=6&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq)\n",
-    "\n",
-    "- Traversal\n",
-    "  - [Pre-order](https://www.youtube.com/watch?v=YlgPi75hIBc)\n",
-    "  - [In-order](https://www.youtube.com/watch?v=5dySuyZf9Qg)\n",
-    "  - [Post-order](https://www.youtube.com/watch?v=4zVdfkpcT6U)\n",
-    "  - [Level-order](https://www.youtube.com/watch?v=IozGo2kwRYE)"
+    "# Binary Search Trees\n",
+    "Binary search trees, sometimes called ordered or sorted binary trees, are a particular type of container: data structures that store \"items\" in memory. "
    ]
   },
   {
@@ -175,6 +157,27 @@
     "    1. Enqueue root\n",
     "    2. While the queue is not empty, peak then dequeue.\n",
     "    3. If left or right child exist, enqueue left then right."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>References:</b>\n",
+    "\n",
+    "- Code\n",
+    "  - [Part 1](https://www.youtube.com/watch?v=1WxLM2hwL-U)\n",
+    "  - [Part 2](https://www.youtube.com/watch?v=LSju119w8BE)\n",
+    "  - [Get Size](https://www.youtube.com/watch?v=vVhp2FYGNKU)\n",
+    "  - [Get Height](https://www.youtube.com/watch?v=aGaMgkJX5-o&index=6&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq)\n",
+    "\n",
+    "- Traversal\n",
+    "  - [Pre-order](https://www.youtube.com/watch?v=YlgPi75hIBc)\n",
+    "  - [In-order](https://www.youtube.com/watch?v=5dySuyZf9Qg)\n",
+    "  - [Post-order](https://www.youtube.com/watch?v=4zVdfkpcT6U)\n",
+    "  - [Level-order](https://www.youtube.com/watch?v=IozGo2kwRYE)\n",
+    "  \n",
+    " [Wikipeida](https://en.wikipedia.org/wiki/Binary_search_tree)"
    ]
   },
   {
